--- a/back/package.json
+++ b/back/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "body-parser": "1.20.0",
+    "cors": "2.8.5",
     "express": "4.18.1",
     "express-validator": "6.14.0",
     "moongose": "1.0.0",
